# DyStream

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_webrtc_e2e.js
model/motion_generation/: motion_gen_gpt_flowmatching_addaudio_linear_twowavencoder.py
streaming_app/: main.py  requirements_streaming.txt  run_server.sh  test_basic.py
streaming_app/assets/default_avatars/: avatar_1.npz
streaming_app/config/: streaming_config.yaml
streaming_app/models/: audio_processor.py  model_loader.py  streaming_inference.py  tensorrt_wrapper.py
streaming_app/tests/: conftest.py  test_audio_processor.py  test_streaming_inference.py  test_visualization.py
streaming_app/utils/: image_processing.py  visualization.py
streaming_app/webrtc/: __init__.py  session.py  state.py  tracks.py
streaming_app/websocket/: connection_manager.py  session_manager.py
streaming_app/workers/: __init__.py  generation_worker.py
streaming_frontend/: index.html  playback.html
streaming_frontend/css/: playback.css  styles.css
streaming_frontend/js/: audio_capture.js  blendshape_player.js  ui_controller.js  video_renderer.js  vrm_renderer.js  webrtc_client.js  websocket_client.js
streaming_frontend/worklets/: audio-processor.js
